Fix: Show comment list scrollbars only on overflow (#314)

--- a/src/components/CommentList/CommentList.scss
+++ b/src/components/CommentList/CommentList.scss
@@ -3,7 +3,7 @@
 
     .ba-comment-list {
         max-height: 282px;
-        overflow-y: scroll;
+        overflow-y: auto;
         user-select: text;
         width: 100%;
     }
